--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "express-session": "^1.15.5",
     "json-bigint": ">= 0.1.4",
     "kerberos": "~0.0",
-    "mongodb": ">= 1.3.14",
+    "mongodb": "^2",
     "mqtt": "^1.6.3",
     "multimeter-hj": "~0.1.2",
     "open": "~0.0.3",
@@ -40,6 +40,7 @@
     "teslacmd": "./examples/teslacmd.js",
     "teslamap": "./examples/teslamap.js",
     "streaming": "./examples/streaming.js",
+    "streamws": "./examples/streamws.js",
     "chargebar": "./examples/chargebar.js",
     "climatemon": "./examples/climatemon.js",
     "restla": "./examples/restla.js",
